# flipkart-recommender

./: .gitignore  Dockerfile  README.md  app.py  flask-k8s.yaml  pyproject.toml  requirements.txt
flipkart/: config.py  data_converter.py  data_ingestion.py  rag_chain.py
utils/: custom_exceptions.py  logger.py
